Multi-dataset selection in checkbox

--- a/UI/src/app/modules/comparison/components/plots/plots.component.html
+++ b/UI/src/app/modules/comparison/components/plots/plots.component.html
@@ -1,3 +1,5 @@
+<!-- Add conditions if the comparison is running or if the selection has not yet been made-->
+
 <div class="p-col-12">
   <p-panel [toggleable]="true" [collapsed]="true">
     <ng-template pTemplate="header">
