--- a/UI/src/app/modules/comparison/components/spatial-extent/spatial-extent.component.html
+++ b/UI/src/app/modules/comparison/components/spatial-extent/spatial-extent.component.html
@@ -1,6 +1,6 @@
 <div class="p-grid">
   <div class="p-col-12">
-    <p-checkbox [label]="extentModel.description" [(ngModel)]="extentModel.value" [binary]="true"
+    <p-checkbox [label]="extentModel.description" [(ngModel)]="extentModel.getIntersection" [binary]="true"
     ></p-checkbox>
     <label class="p-panel-header-icon"
            pTooltip="{{extentModel.helperText}}"
