onChange added to version dropdown (also soon on angular_ui branch)

--- a/UI/src/app/modules/dataset/components/dataset/dataset.component.html
+++ b/UI/src/app/modules/dataset/components/dataset/dataset.component.html
@@ -13,7 +13,7 @@
 <div class="p-grid  p-align-center">
   <div class="p-col">
     <span class="p-float-label p-mb-4">
-      <p-dropdown id="versionSelector" [style]="{'width': '100%'}" [options]="(selectableDatasetVersions$|async)"
+      <p-dropdown id="versionSelector" (onChange)="onVersionChange()" [style]="{'width': '100%'}" [options]="(selectableDatasetVersions$|async)"
                   [(ngModel)]="selectionModel.selectedVersion" optionLabel="pretty_name"></p-dropdown>
       <label for="versionSelector">Version</label>
     </span>
