reading settings of tcol added

--- a/UI/src/app/pages/validate/validate.component.html
+++ b/UI/src/app/pages/validate/validate.component.html
@@ -103,7 +103,7 @@
 
       <!--      Metrics-->
       <div class="p-col-12">
-        <qa-metrics [validationModel]="validationModel"></qa-metrics>
+        <qa-metrics [validationModel]="validationModel" [metricsList]="metricsList"></qa-metrics>
       </div>
 
       <!--      Anomalies-->
