Added comparison table component

--- a/UI/src/app/pages/comparison/comparison.component.html
+++ b/UI/src/app/pages/comparison/comparison.component.html
@@ -15,7 +15,9 @@
 
   <!--   validations selection   -->
     <qa-validation-selector></qa-validation-selector>
-  <!--  table and plots section  -->
-    <qa-plots></qa-plots>
+  <!--  table section  -->
+    <qa-table-comparison [comparisonModel]="null"></qa-table-comparison>
+  <!--  plots section  -->
+    <qa-plots [comparisonModel]="null"></qa-plots>
   </div>
 </div>
