--- a/UI/src/app/modules/comparison/components/plots/plots.component.html
+++ b/UI/src/app/modules/comparison/components/plots/plots.component.html
@@ -1,36 +1,3 @@
-<!-- Add conditions if the comparison is running or if the selection has not yet been made-->
-
-<div class="p-col-12">
-  <p-panel [toggleable]="true" [collapsed]="true">
-    <ng-template pTemplate="header">
-      <div class="text-center my-1" style="width: 92%">
-        <h4 class="my-0 font-weight-normal">Comparison summary</h4>
-      </div>
-    </ng-template>
-    <ng-template pTemplate="icons">
-      <label class="mb-0" pTooltip="Expand this section to inspect a table with the metric-wise difference of the two datasets."
-             tooltipPosition="bottom">
-        <span class="p-panel-header-icon pi pi-question-circle help-icon"></span>
-      </label>
-    </ng-template>
-    <div class="pb-3"> Shown are the median values for each metric in the two comparison datasets, and the difference
-      between REF0 and REF1.
-    </div>
-    <div *ngIf="(comparisonTable$|async) as table" class="pb-3">
-
-      <div class="d-flex justify-content-between align-items-center">
-        <button type="button"
-                style="width: 12rem;"
-                class="btn btn-sm btn-primary"
-                title="Download the table to a .csv file"
-                (click)="getComparisonTableAsCsv()">
-          <span class="pi pi-download"></span> Download .csv table
-        </button>
-      </div>
-    </div>
-  </p-panel>
-</div>
-
 <div class="p-col-12">
   <p-panel [toggleable]="true" [collapsed]="false">
     <ng-template pTemplate="header">
@@ -44,7 +11,7 @@
         <span class="p-panel-header-icon pi pi-question-circle help-icon"></span>
       </label>
     </ng-template>
-    <div class="pb-3"> Shown are the comparison plots of REF0 and REF1. To generate maps and correlation plots with the
+    <div class="pb-3"> Shown are the comparison plots of  and . To generate maps and correlation plots with the
       comparison results, make sure that the input validations have overlapping extents and/or either 'Intersection' or
       a common extent is given in the 'extent' setting.
     </div>
