--- a/UI/src/app/pages/home/home.component.html
+++ b/UI/src/app/pages/home/home.component.html
@@ -8,7 +8,7 @@
   </div>
   <div class="p-col-12">
     <div class="p-d-flex p-jc-center ">
-      <p-button label="Sign up" styleClass="p-mr-2 "></p-button>
+      <p-button label="Sign up" styleClass="p-mr-2 " (onClick)="goToSignUp()"></p-button>
       <p-button label="Sign in" styleClass="p-mr-2 " routerLink="/login" [disabled]="loginButtonDisabled"></p-button>
     </div>
   </div>
