plots and table in comparison page

--- a/UI/src/app/modules/comparison/components/plots/plots.component.html
+++ b/UI/src/app/modules/comparison/components/plots/plots.component.html
@@ -18,7 +18,7 @@
           <img *ngFor="let plot of plots"
                width="95%"
                height="95%"
-               [src]="sanitizePlotUrl(plot)">
+               [src]=sanitizePlotUrl(plot)>
       </div>
       <!--  buttons  -->
       <div class="p-grid">
