--- a/UI/src/app/modules/comparison/components/validation-selector/validation-selector.component.html
+++ b/UI/src/app/modules/comparison/components/validation-selector/validation-selector.component.html
@@ -108,7 +108,7 @@
           <qa-spatial-extent
             [extentModel]="this.spatialExtent"
             [disabled]="this.spatialExtentDisabled()"
-            (onChecked)="unionChecked($event)">
+            (ifChecked)="unionChecked($event)">
           </qa-spatial-extent>
         </div>
       </div>
