Different labels added, depending on the status of the list of validations for comparison

--- a/UI/src/app/modules/comparison/components/validation-selector/validation-selector.component.html
+++ b/UI/src/app/modules/comparison/components/validation-selector/validation-selector.component.html
@@ -69,7 +69,7 @@
                             optionLabel="id"
                             [style]="{'width':'100%'}"></p-dropdown>
 
-                <label for="validationSelector">Select a validation</label>
+                <label *ngIf="selectedDatasetModel[0]" for="validationSelector">{{selectValidationLabel}}</label>
               </div>
             </div>
           </div>
